i have added various other layout like congratulation,loose,playWithbot,and a overflow menu i have also changed some appearance of the UI.

--- a/app/src/main/res/layout/activity_two_player.xml
+++ b/app/src/main/res/layout/activity_two_player.xml
@@ -5,18 +5,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:fontFamily="monospace"
-        android:text="TIC TAC TOE"
-        android:textColor="@color/black"
-        android:textSize="32sp"
+    tools:context=".twoPlayer">
+
+    <ImageView
+        android:layout_width="417dp"
+        android:layout_height="45dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ttt" />
+
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
@@ -30,7 +28,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <TextView
-            android:id="@+id/userName"
+            android:id="@+id/firstName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="40dp"
@@ -45,7 +43,7 @@
             android:textSize="20dp" />
 
         <TextView
-            android:id="@+id/opponentName"
+            android:id="@+id/secondName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="40dp"
@@ -220,81 +218,4 @@
 
         </LinearLayout>
     </LinearLayout>
-
-
-    <LinearLayout
-        android:id="@+id/linearLayout5"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <EditText
-            android:id="@+id/msg"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:hint="Message" />
-
-        <ImageView
-            android:layout_marginRight="10dp"
-            android:id="@+id/send"
-            android:layout_width="30dp"
-            android:onClick="send"
-            android:layout_height="30dp"
-            android:layout_marginTop="10dp"
-            android:src="@drawable/send" />
-
-    </LinearLayout>
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        app:cardCornerRadius="5dp"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:background="@null"
-            android:hint="Opponent message Here"
-            android:textSize="32sp" />
-    </androidx.cardview.widget.CardView>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toTopOf="@+id/cardView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView3"
-        app:layout_constraintVertical_bias="0.807">
-
-        <Button
-            android:id="@+id/blog"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="blog"
-            android:text="blogs"
-            android:textAllCaps="true" />
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:onClick="registerActivity"
-            android:text="register"
-            android:textAllCaps="true" />
-    </LinearLayout>
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
