--- a/app/src/main/res/layout/activity_two_player.xml
+++ b/app/src/main/res/layout/activity_two_player.xml
@@ -76,7 +76,7 @@
             android:textStyle="bold"/>
     </LinearLayout>
 
-    <LinearLayout
+     <!-- <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="44dp"
@@ -105,7 +105,7 @@
             android:text="OPPONENT"
             android:textStyle="bold" />
 
-    </LinearLayout>
+    </LinearLayout>-->
 
     <ImageView
         android:id="@+id/imageView3"
