ADDED BLOGGING TO THE APP IN WHICH THERE IS A FLOATING ACTION BUTTON CLICKING ON IT OPENS A ACTIVITY TO ADD NEW POST

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,17 +7,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:fontFamily="monospace"
-        android:text="TIC TAC TOE"
-        android:textColor="@color/black"
-        android:textSize="32sp"
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ttt" />
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
@@ -71,7 +68,7 @@
             android:text="Current Turn:-" />
 
         <TextView
-            android:id="@+id/username2"
+            android:id="@+id/currentTurn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="KAINAT"
@@ -79,7 +76,7 @@
             android:textStyle="bold"/>
     </LinearLayout>
 
-    <LinearLayout
+   <!-- <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="44dp"
@@ -108,7 +105,7 @@
             android:text="OPPONENT"
             android:textStyle="bold" />
 
-    </LinearLayout>
+    </LinearLayout>-->
 
     <ImageView
         android:id="@+id/imageView3"
@@ -140,7 +137,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="0"
                 android:onClick="tap"
-                android:tag="0" />
+                android:tag="1" />
 
             <ImageView
                 android:id="@+id/i2"
@@ -148,7 +145,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="0"
                 android:onClick="tap"
-                android:tag="1" />
+                android:tag="2" />
 
             <ImageView
                 android:id="@+id/i3"
@@ -156,7 +153,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="0"
                 android:onClick="tap"
-                android:tag="2" />
+                android:tag="3" />
         </LinearLayout>
 
         <LinearLayout
@@ -169,7 +166,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="0"
                 android:onClick="tap"
-                android:tag="3" />
+                android:tag="4" />
 
             <ImageView
                 android:id="@+id/i5"
@@ -177,7 +174,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="0"
                 android:onClick="tap"
-                android:tag="4" />
+                android:tag="5" />
 
             <ImageView
                 android:id="@+id/i6"
@@ -185,7 +182,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="0"
                 android:onClick="tap"
-                android:tag="5" />
+                android:tag="6" />
         </LinearLayout>
 
         <LinearLayout
@@ -199,7 +196,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="0"
                 android:onClick="tap"
-                android:tag="6" />
+                android:tag="7" />
 
             <ImageView
                 android:id="@+id/i8"
@@ -207,7 +204,7 @@
                 android:layout_height="match_parent"
                 android:layout_weight="0"
                 android:onClick="tap"
-                android:tag="7" />
+                android:tag="8" />
 
             <ImageView
                 android:id="@+id/i9"
@@ -216,10 +213,31 @@
                 android:layout_height="match_parent"
                 android:layout_weight="0"
                 android:onClick="tap"
-                android:tag="8" />
+                android:tag="9" />
 
         </LinearLayout>
     </LinearLayout>
+
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        app:cardCornerRadius="5dp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@null"
+            android:hint="Opponent message Here"
+            android:textSize="32sp" />
+    </androidx.cardview.widget.CardView>
 
 
     <LinearLayout
@@ -249,25 +267,7 @@
 
     </LinearLayout>
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        app:cardCornerRadius="5dp"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout5"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:background="@null"
-            android:hint="Opponent message Here"
-            android:textSize="32sp" />
-    </androidx.cardview.widget.CardView>
 
 
 
