--- a/app/src/main/res/layout/activity_congratulation.xml
+++ b/app/src/main/res/layout/activity_congratulation.xml
@@ -20,7 +20,7 @@
         android:id="@+id/nameOfWinner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Kainat"
+        android:text="nameOfWinner"
         android:textColor="@color/black"
         android:textSize="32sp"
         app:layout_constraintEnd_toEndOf="parent"
