--- a/app/src/main/res/layout/fragment_blog_page.xml
+++ b/app/src/main/res/layout/fragment_blog_page.xml
@@ -39,6 +39,7 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="match_parent"
+        android:background="@drawable/paper_background"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
