--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,7 +7,6 @@
     android:fitsSystemWindows="true"
     android:orientation="vertical"
     tools:context=".home">
-
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
@@ -19,15 +18,14 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?actionBarSize"
-            android:background="@color/teal_700"
+            android:background="#01605F"
             app:layout_scrollFlags="scroll|enterAlways"
             app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
-
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/teal_700"
+            android:background="#01605F"
             app:tabGravity="fill"
             app:tabIndicatorColor="@color/white"
             app:tabIndicatorHeight="1.5dp"
@@ -41,61 +39,4 @@
         android:layout_height="match_parent"
         android:layout_below="@+id/appBarLayout"
         app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />
-    <!-- <TextView
-         android:id="@+id/mail"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:layout_marginTop="248dp"
-         android:text="TextView"
-         app:layout_constraintEnd_toEndOf="parent"
-         app:layout_constraintHorizontal_bias="0.542"
-         app:layout_constraintStart_toStartOf="parent"
-         app:layout_constraintTop_toBottomOf="@+id/name" />
-
-     <TextView
-         android:id="@+id/name"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:layout_marginTop="256dp"
-         android:text="TextView" />
-         <LinearLayout
-         android:layout_width="match_parent"
-         android:layout_height="wrap_content"
-         android:orientation="horizontal">
-
-         <TextView
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:text="Home"
-             android:textSize="50sp"
-             android:textStyle="bold" />
-
-         <TextView
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:layout_marginLeft="100dp"
-             android:onClick="blogOpen"
-             android:text="Blog"
-             android:textSize="50sp"
-             android:textStyle="bold" />
-     </LinearLayout>
-
-     <LinearLayout
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:orientation="horizontal">
-         <TextView
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content"
-             android:text="Your ID=" />
-         <TextView
-             android:id="@+id/UserId"
-             android:layout_width="wrap_content"
-             android:layout_height="wrap_content" />
-     </LinearLayout>
-     <ListView
-         android:id="@+id/usersList"
-         android:layout_width="match_parent"
-         android:layout_height="wrap_content"/>-->
-
 </RelativeLayout>
